--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -35,9 +35,9 @@
 				<tr th:each="user : ${userModel.userList}">
 					<td th:text="${user.id}">1</td>
 					<td th:text="${user.username}">1</td>
-					<td th:text="${user.name}">waylau</td>
-					<td th:text="${user.email}">waylau</td>
-					<td th:text="${user.authorities}">waylau</td>
+					<td th:text="${user.name}">朱文赵</td>
+					<td th:text="${user.email}">朱文赵</td>
+					<td th:text="${user.authorities}">朱文赵</td>
 					<td>
 						<div>
 							<a class="blog-edit-user" data-toggle="modal"
