--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -70,6 +70,7 @@
                 </form>
 
             </ul>
+            <!--已认证-->
             <div sec:authorize="isAuthenticated()"  class="row" >
 				<div class="dropdown">
 					<a class=" dropdown-toggle" href="/u/waylau" th:href="@{'/u/' + ${#authentication.name}}" data-toggle="dropdown"><span sec:authentication="name"></span></a>
@@ -86,9 +87,8 @@
 					<input class="btn btn-outline-success " type="submit" value="退出">
 				</form>
             </div>
- 
-                
 
+            <!-- 未认证-->
             <div sec:authorize="isAnonymous()">
                 <a href="/login" class="btn btn-outline-success my-2 my-sm-0" type="submit">登录</a>
                 <a href="/register" class="btn btn-outline-success my-2 my-sm-0" type="submit">注册</a>
