--- a/src/main/resources/templates/userspace/avatar.html
+++ b/src/main/resources/templates/userspace/avatar.html
@@ -47,7 +47,7 @@
  
     </div>
 </div>
-<form  enctype="multipart/form-data"  id="avatarformid"  >
+<form  enctype="multipart/form-data"  id="avatar-form-id">
 </form> 
 
 <script>
