--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4" data-th-fragment="header">
+<html   lang="zh-CN"
+        xmlns:th="http://www.thymeleaf.org"
+        xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4" data-th-fragment="header">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+
     <!-- CSRF 可以全局拿到此csrf-token的值 -->
-	<meta name="_csrf" th:content="${_csrf.token}"/>
-	<!-- default header name is X-CSRF-TOKEN -->
-	<meta name="_csrf_header" th:content="${_csrf.headerName}"/>
-	
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <!-- default header name is X-CSRF-TOKEN -->
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+
     <!-- Tether core CSS -->
     <link href="../../css/tether.min.css" th:href="@{/css/tether.min.css}" rel="stylesheet">
 
@@ -28,16 +28,16 @@
 
     <!-- bootstrap tags CSS -->
     <link href="../../css/bootstrap-tagsinput.css" th:href="@{/css/jquery.tagsinput.min.css}" rel="stylesheet">
-    
+
     <!-- bootstrap chosen CSS -->
     <link href="../../css/component-chosen.min.css" th:href="@{/css/component-chosen.min.css}" rel="stylesheet">
 
     <!-- toastr CSS -->
     <link href="../../css/toastr.min.css" th:href="@{/css/toastr.min.css}" rel="stylesheet">
-    
+
     <!-- jQuery image cropping plugin CSS -->
     <link href="../../css/cropbox.css" th:href="@{/css/cropbox.css}" rel="stylesheet">
-    
+
     <!-- Custom styles -->
     <link href="../../css/style.css" th:href="@{/css/style.css}" rel="stylesheet">
     <link href="../../css/thymeleaf-bootstrap-paginator.css" th:href="@{/css/thymeleaf-bootstrap-paginator.css}"
@@ -52,40 +52,46 @@
                 aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="/" th:href="@{/}">NewStarBlog</a>
+        <a class="navbar-brand" href="/" th:href="@{/}">Blog</a>
 
         <div class="collapse navbar-collapse" id="navbarsContainer">
 
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0)" th:attr="url='/blogs?order=new'" >最新 <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="javascript:void(0)" th:attr="url='/blogs?order=new'">最新 <span
+                            class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="javascript:void(0)" th:attr="url='/blogs?order=hot'">最热</a>
                 </li>
                 <form class="form-inline mt-2 mt-md-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="搜索" id="indexkeyword" th:value="${keyword}">
-                    <a href="javascript:void(0)" class="btn btn-outline-secondary my-2 my-sm-0" id="indexsearch"><i class="fa fa-search"
-                                                                                             aria-hidden="true"></i></a>
+                    <input class="form-control mr-sm-2" type="text" placeholder="搜索" id="indexkeyword"
+                           th:value="${keyword}">
+                    <a href="javascript:void(0)" class="btn btn-outline-secondary my-2 my-sm-0" id="indexsearch"><i
+                            class="fa fa-search"
+                            aria-hidden="true"></i></a>
                 </form>
 
             </ul>
             <!--已认证-->
-            <div sec:authorize="isAuthenticated()"  class="row" >
-				<div class="dropdown">
-					<a class=" dropdown-toggle" href="/u/waylau" th:href="@{'/u/' + ${#authentication.name}}" data-toggle="dropdown"><span sec:authentication="name"></span></a>
-					<div class="dropdown-menu" >
-						<a class=" dropdown-item" href="/u/waylau" th:href="@{'/u/' + ${#authentication.name}}">个人主页</a> 
-						<a class="dropdown-item" href="/u/waylau/profile" th:href="@{'/u/' + ${#authentication.name}} + '/profile'" >个人设置</a>
-					</div>
-				</div>
- 				<div>
- 					<a href="/u/waylau/blogs/edit" th:href="'/u/' + ${#authentication.name} + '/blogs/edit'" class="btn btn-outline-success my-2 my-sm-0">写博客</a>
- 				</div>
-                
-				<form action="/logout" th:action="@{/logout}" method="post">
-					<input class="btn btn-outline-success " type="submit" value="退出">
-				</form>
+            <div sec:authorize="isAuthenticated()" class="row">
+                <div class="dropdown">
+                    <a class=" dropdown-toggle" href="/u/waylau" th:href="@{'/u/' + ${#authentication.name}}"
+                       data-toggle="dropdown"><span sec:authentication="name"></span></a>
+                    <div class="dropdown-menu">
+                        <a class=" dropdown-item" href="/u/waylau" th:href="@{'/u/' + ${#authentication.name}}">个人主页</a>
+                        <a class="dropdown-item" href="/u/waylau/profile"
+                           th:href="@{'/u/' + ${#authentication.name}} + '/profile'">个人设置</a>
+                    </div>
+                </div>
+                <div>
+                    <a href="/u/waylau/blogs/edit" th:href="'/u/' + ${#authentication.name} + '/blogs/edit'"
+                       class="btn btn-outline-success my-2 my-sm-0">写博客</a>
+                </div>
+
+                <form action="/logout" th:action="@{/logout}" method="post">
+                    <input class="btn btn-outline-success " type="submit" value="退出">
+                </form>
             </div>
 
             <!-- 未认证-->
