--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -76,16 +76,16 @@
             <!--已认证-->
             <div sec:authorize="isAuthenticated()" class="row">
                 <div class="dropdown">
-                    <a class=" dropdown-toggle" href="/u/waylau" th:href="@{'/u/' + ${#authentication.name}}"
-                       data-toggle="dropdown"><span sec:authentication="name"></span></a>
+                    <a class="nav-link dropdown-toggle" href="/u/ximo" th:href="@{'/u/' + ${#authentication.name}}"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><span sec:authentication="name"></span></a>
                     <div class="dropdown-menu">
-                        <a class=" dropdown-item" href="/u/waylau" th:href="@{'/u/' + ${#authentication.name}}">个人主页</a>
-                        <a class="dropdown-item" href="/u/waylau/profile"
+                        <a class=" dropdown-item" href="/u/ximo" th:href="@{'/u/' + ${#authentication.name}}">个人主页</a>
+                        <a class="dropdown-item" href="/u/ximo/profile"
                            th:href="@{'/u/' + ${#authentication.name}} + '/profile'">个人设置</a>
                     </div>
                 </div>
                 <div>
-                    <a href="/u/waylau/blogs/edit" th:href="'/u/' + ${#authentication.name} + '/blogs/edit'"
+                    <a href="/u/ximo/blogs/edit" th:href="'/u/' + ${#authentication.name} + '/blogs/edit'"
                        class="btn btn-outline-success my-2 my-sm-0">写博客</a>
                 </div>
 
@@ -96,8 +96,8 @@
 
             <!-- 未认证-->
             <div sec:authorize="isAnonymous()">
-                <a href="/login" class="btn btn-outline-success my-2 my-sm-0" type="submit">登录</a>
-                <a href="/register" class="btn btn-outline-success my-2 my-sm-0" type="submit">注册</a>
+                <button onclick="window.location.href='/login'" class="btn btn-outline-success my-2 my-sm-0" type="submit">登录</button>
+                <button onclick="window.location.href='/register'" class="btn btn-outline-success my-2 my-sm-0" type="submit">注册</button>
             </div>
 
         </div>
