--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -64,6 +64,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="javascript:void(0)" th:attr="url='/blogs?order=hot'">最热</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:void(0)" th:attr="url='/blogs?order=recommend'">推荐</a>
+                </li>
                 <form class="form-inline mt-2 mt-md-0">
                     <input class="form-control mr-sm-2" type="text" placeholder="搜索" id="indexkeyword"
                            th:value="${keyword}">
