--- a/src/main/resources/templates/userspace/catalogedit.html
+++ b/src/main/resources/templates/userspace/catalogedit.html
@@ -4,7 +4,7 @@
 
 	<div class="form-group">
 		<label for="catalogName" class="col-form-label">名称</label>
-		<input type="text" class="form-control" id="catalogName" name="name" th:value="*{name}" maxlength="30" placeholder="请输入姓名，至少2个字符，至多30个" >
+		<input type="text" class="form-control" id="catalogName" name="name" th:value="*{name}" maxlength="30" placeholder="请输入分类，至少2个字符，至多30个" >
 	</div>
  </form>
 </div>
