--- a/src/main/resources/templates/userspace/u.html
+++ b/src/main/resources/templates/userspace/u.html
@@ -28,7 +28,7 @@
             <div class="row">
 
                 <div class="col-md-12">
-                    <h2 class="card-text" th:text="${user.name}">老卫</h2>
+                    <h2 class="card-text" th:text="${user.name}">朱文赵</h2>
                     <h4 class="card-text" th:text="${user.username}">ximo</h4>
                 </div>
             </div>
@@ -146,7 +146,8 @@
 				</button>
 
 			</div>
-			<div class="modal-body" id="catalogFormContainer"></div>
+			<div class="modal-body" id="catalogFormContainer">
+			</div>
 			<div class="modal-footer">
 				<button class="btn btn-primary" data-dismiss="modal" id="submitEditCatalog">提交</button>
 				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
